Add refresh Token functionality, upgrade admin tools